--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "tracing"
+name = "{{project-name}}"
 version = "0.1.0"
-authors = ["Nouzan <clobraindie@outlook.com>"]
+authors = ["{{authors}}"]
 edition = "2018"
 
 [dependencies]
